Ensure all characters are plain text compatible

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -8,15 +8,15 @@
    *! HTML5 Boilerplate v5.0.0 | MIT License | http://h5bp.com/
    *! normalize.css v3.0.2 | MIT License | git.io/normalize
    *! Responsive.gs v3.0.0 | GPL & MIT | http://responsive.gs
-*–––––––––––––––––––––––––––––––––––––––––––––––––!*/
+*===========================================================!*/
 
 /***! Statement of Purpose
    *    To gain a deeper understanding of CSS3, HTML5, Sass, &
    *    popular StyleSheet Templates
-*–––––––––––––––––––––––––––––––––––––––––––––––––!*/
+*===========================================================!*/
 
 /**** BOX MODEL BROWSER COMPATIBILITY
-*––––––––––––––––––––––––––––––––––––––––––––––––––*/
+*============================================================*/
 * {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
@@ -28,7 +28,7 @@
 }
 
 /**** HTML5 DISPLAY
-*––––––––––––––––––––––––––––––––––––––––––––––––––*/
+*============================================================*/
 article, aside, details, figcaption, figure, footer, header,
 hgroup, main, menu, nav, section, summary {
   display: block;
@@ -49,7 +49,7 @@ audio:not([controls]) {
 }
 
 /**** BASE
-*––––––––––––––––––––––––––––––––––––––––––––––––––*/
+*============================================================*/
 body, button, html, input, select, textarea {
   color: #333333;
   font-family: sans-serif;
@@ -80,7 +80,7 @@ html {
 }
 
 /**** TYPOGRAPHY
-*––––––––––––––––––––––––––––––––––––––––––––––––––*/
+*============================================================*/
 abbr[title] {
   border-bottom: 0.0625em dotted;
 }
@@ -171,7 +171,7 @@ sup{
 }
 
 /**** ADJUSTMENTS
-*––––––––––––––––––––––––––––––––––––––––––––––––––*/
+*============================================================*/
 audio, canvas, iframe, img, svg, video {
   vertical-align: middle;
 }
@@ -221,7 +221,7 @@ textarea {
 }
 
 /**** LINKS
-*––––––––––––––––––––––––––––––––––––––––––––––––––*/
+*============================================================*/
 a:active, a:hover {
   outline: 0;
 }
@@ -239,7 +239,7 @@ a:hover {
 }
 
 /**** LISTS
-*––––––––––––––––––––––––––––––––––––––––––––––––––*/
+*============================================================*/
 dd {
   margin: 0 0 0 40px;
 }
@@ -266,7 +266,7 @@ ol, ul {
 }
 
 /**** TABLES
-*––––––––––––––––––––––––––––––––––––––––––––––––––*/
+*============================================================*/
 table{
   border-collapse: collapse;
   border-spacing: 0;
@@ -277,7 +277,7 @@ td, th {
 }
 
 /**** EMBEDDED CONTENT
-*––––––––––––––––––––––––––––––––––––––––––––––––––*/
+*============================================================*/
 img {
   border: 0;
   -ms-interpolation-mode: bicubic;
@@ -288,7 +288,7 @@ svg:not(:root) {
 }
 
 /**** FORMS
-*––––––––––––––––––––––––––––––––––––––––––––––––––*/
+*============================================================*/
 button, html input[type="button"], input[type="reset"],
 input[type="submit"] {
   cursor: pointer;
@@ -363,7 +363,7 @@ optgroup {
 }
 
 /**** GRID
-*––––––––––––––––––––––––––––––––––––––––––––––––––*/
+*============================================================*/
 .column:after, .container:after, .row:after {
   content: "";
   display: table;
@@ -491,8 +491,7 @@ optgroup {
 }
 
 /**** MEDIA QUERIES
-*––––––––––––––––––––––––––––––––––––––––––––––––––*/
-
+*============================================================*/
 @media only screen and (min-width: 35em) {
 /*  ADJUSTMENTS FOR VIEWPORTS THAT MEET THE CONDITION  */
 }
@@ -505,7 +504,7 @@ optgroup {
 }
 
 /**** HELPERS
-*––––––––––––––––––––––––––––––––––––––––––––––––––*/
+*============================================================*/
 .clearfix:after {
   clear: both;
 }
@@ -550,7 +549,7 @@ optgroup {
 }
 
 /**** PRINT STYLES
-*––––––––––––––––––––––––––––––––––––––––––––––––––*/
+*============================================================*/
 @media print {
   * {
     background: transparent !important;
@@ -607,7 +606,7 @@ optgroup {
 }
 
 /**** PRIMARY
-*––––––––––––––––––––––––––––––––––––––––––––––––––*/
+*============================================================*/
 .container {
   max-width: 37.5em;
   margin: 0 auto;
@@ -683,31 +682,30 @@ optgroup {
 }
 
 /**** HEADER
-*––––––––––––––––––––––––––––––––––––––––––––––––––*/
+*============================================================*/
 
 /**/
 
 /**** MAIN
-*––––––––––––––––––––––––––––––––––––––––––––––––––*/
+*============================================================*/
 
 /**/
 
 /**** ASIDE
-*––––––––––––––––––––––––––––––––––––––––––––––––––*/
+*============================================================*/
 
 /**/
 
 /**** FOOTER
-*––––––––––––––––––––––––––––––––––––––––––––––––––*/
+*============================================================*/
 
 /**/
 
 /**** SAD BROWSER
-*––––––––––––––––––––––––––––––––––––––––––––––––––*/
+*============================================================*/
 #sadbrowser {
   margin: 0.2em 0;
   background: #CCCCCC;
   color: #000000;
   padding: 0.2em 0;
 }
-
