--- a/public/css/main.css
+++ b/public/css/main.css
@@ -608,7 +608,7 @@ optgroup {
 /**** PRIMARY
 *============================================================*/
 .container {
-  max-width: 37.5em;
+  max-width: 30em;
   margin: 0 auto;
 }
 
@@ -629,7 +629,7 @@ optgroup {
   "Baskerville Old Face", "Times New Roman", serif;
 }
 
-.margin-ends_large {
+.margin-caps_large {
   margin: 2.5em 0;
 }
 
