Add headshot image, add styling to headshot

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -683,15 +683,13 @@ optgroup {
 
 /**** HEADER
 *============================================================*/
-
-/**/
+.headshot {
+  border-radius: 6.25em;
+  transition: 500ms linear0s;
+  width: 8em;
+}
 
 /**** MAIN
-*============================================================*/
-
-/**/
-
-/**** ASIDE
 *============================================================*/
 
 /**/
