--- a/public/css/main.css
+++ b/public/css/main.css
@@ -607,7 +607,7 @@ optgroup {
 
 /**** PRIMARY
 *============================================================*/
-.container {
+#container {
   max-width: 30em;
   margin: 0 auto;
 }
@@ -688,6 +688,25 @@ optgroup {
   transition: 500ms linear0s;
   width: 8em;
 }
+
+@media (max-width: 330px) {
+  .header_one {
+    font-size: 4em;
+  }
+  .headshot {
+    width: 4.6875em;
+  }
+}
+
+/*@media (max-width: 640px) {
+  .header_one {
+    font-size: 4em;
+  }
+  .headshot {
+    width: 4.6875em;
+  }
+}*/
+
 
 /**** MAIN
 *============================================================*/
