--- a/public/css/main.css
+++ b/public/css/main.css
@@ -235,7 +235,10 @@ a:focus {
 }
 
 a:hover {
-  text-decoration: underline;
+  background: #0099CC;
+  color: #FFFFFF;
+  border: 2px solid #0099CC;
+  border-radius: 0.3em;
 }
 
 /**** LISTS
