--- a/public/css/main.css
+++ b/public/css/main.css
@@ -25,6 +25,10 @@
   -webkit-margin-after: 0;
   -webkit-margin-start: 0;
   -webkit-margin-end: 0;
+  -webkit-touch-callout: none;
+  -webkit-text-size-adjust: none;
+  -webkit-tap-highlight-color: rgba(0,0,0,0);
+  -webkit-user-select: none;
 }
 
 /**** HTML5 DISPLAY
@@ -390,7 +394,13 @@ optgroup {
 }
 
 .row {
-  padding-bottom: 0em;
+  width: 100%;
+  margin-left: auto;
+  margin-right: auto;
+/*  margin-top: 0;
+  margin-bottom: 0;*/
+  max-width: 62.5rem;
+  /*padding-bottom: .1em;*/
 }
 
 @media screen and (min-width : 768px) {
@@ -570,59 +580,472 @@ optgroup {
     box-shadow: none !important;
     text-shadow: none !important;
   }
-
   a, a:visited {
     text-decoration: underline;
   }
-
   a[href]:after {
     content: " (" attr(href) ")";
   }
-
   abbr[title]:after {
     content: " (" attr(title) ")";
   }
-
   a[href^="javascript:"]:after, a[href^="#"]:after {
     content: "";
   }
-
   pre, blockquote {
     border: 1px solid #999999;
     page-break-inside: avoid;
   }
-
   thead {
     display: table-header-group;
   }
-
   img, tr {
     page-break-inside: avoid;
   }
-
   img {
     max-width: 100% !important;
   }
-
   @page {
     margin: 0.5cm;
   }
-
   p, h2, h3 {
     orphans: 3;
     widows: 3;
   }
-
   h2, h3 {
     page-break-after: avoid;
   }
 }
 
+/**** SIMPLE CSS ANIMATIONS
+*============================================================*/
+.animated {
+  -webkit-animation-fill-mode: both;
+  -moz-animation-fill-mode: both;
+  -ms-animation-fill-mode: both;
+  -o-animation-fill-mode: both;
+  animation-fill-mode: both;
+  -webkit-animation-duration: 1s;
+  -moz-animation-duration: 1s;
+  -ms-animation-duration: 1s;
+  -o-animation-duration: 1s;
+  animation-duration: 1s;
+}
+
+.animated.hinge {
+  -webkit-animation-duration: 2s;
+  -moz-animation-duration: 2s;
+  -ms-animation-duration: 2s;
+  -o-animation-duration: 2s;
+  animation-duration: 2s;
+}
+
+
+@-webkit-keyframes bounceIn {
+  0% {
+    opacity: 0;
+    -webkit-transform: scale(0.8);
+  }
+  50% {
+    opacity: 1;
+    -webkit-transform: scale(1.05);
+  }
+  100% {
+    opacity: 1;
+    -webkit-transform: scale(1);
+  }
+}
+
+@-moz-keyframes bounceIn {
+  0% {
+    opacity: 0;
+    -moz-transform: scale(0.8);
+  }
+  50% {
+    opacity: 1;
+    -moz-transform: scale(1.05);
+  }
+  100% {
+    opacity: 1;
+    -moz-transform: scale(1);
+  }
+}
+
+@-o-keyframes bounceIn {
+  0% {
+    opacity: 0;
+    -o-transform: scale(0.8);
+  }
+  50% {
+    opacity: 1;
+    -o-transform: scale(1.05);
+  }
+  100% {
+    opacity: 1;
+    -o-transform: scale(1);
+  }
+}
+
+@keyframes bounceIn {
+  0% {
+    opacity: 0;
+    transform: scale(0.8);
+  }
+  50% {
+    opacity: 1;
+    transform: scale(1.05);
+  }
+  100% {
+    opacity: 1;
+    transform: scale(1);
+  }
+}
+
+.bounceIn {
+  -webkit-animation-name: bounceIn;
+  -moz-animation-name: bounceIn;
+  -o-animation-name: bounceIn;
+  animation-name: bounceIn;
+}
+
+@-webkit-keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+@-moz-keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+@-o-keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+.delay {
+  -webkit-animation-delay: 0.30s;
+  -moz-animation-delay: 0.30s;
+  -o-animation-delay: 0.30s;
+  animation-delay: 0.30s;
+}
+
+.delay-three {
+  -webkit-animation-delay: 0.60s;
+  -moz-animation-delay: 0.60s;
+  -o-animation-delay: 0.60s;
+  animation-delay: 0.60s;
+}
+
+.delay-two {
+  -webkit-animation-delay: 1.0s;
+  -moz-animation-delay: 1.0s;
+  -o-animation-delay: 1.0s;
+  animation-delay: 1.0s;
+}
+
+.delay-one {
+  -webkit-animation-delay: 1.5s;
+  -moz-animation-delay: 1.5s;
+  -o-animation-delay: 1.5s;
+  animation-delay: 1.5s;
+}
+
+.fadeIn {
+  -webkit-animation-name: fadeIn;
+  -moz-animation-name: fadeIn;
+  -o-animation-name: fadeIn;
+  animation-name: fadeIn;
+}
+
+@-webkit-keyframes fadeInUp {
+  0% {
+    opacity: 0;
+    -webkit-transform: translateY(20px);
+  }
+  100% {
+    opacity: 1;
+    -webkit-transform: translateY(0);
+  }
+}
+
+@-moz-keyframes fadeInUp {
+  0% {
+    opacity: 0;
+    -moz-transform: translateY(20px);
+  }
+  100% {
+    opacity: 1;
+    -moz-transform: translateY(0);
+  }
+}
+
+@-o-keyframes fadeInUp {
+  0% {
+    opacity: 0;
+    -o-transform: translateY(20px);
+  }
+  100% {
+    opacity: 1;
+    -o-transform: translateY(0);
+  }
+}
+
+@keyframes fadeInUp {
+  0% {
+    opacity: 0;
+    transform: translateY(20px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+.fadeInUp {
+  -webkit-animation-name: fadeInUp;
+  -moz-animation-name: fadeInUp;
+  -o-animation-name: fadeInUp;
+  animation-name: fadeInUp;
+}
+
+@-webkit-keyframes fadeInDown {
+  0% {
+    opacity: 0;
+    -webkit-transform: translateY(-20px);
+  }
+  100% {
+    opacity: 1;
+    -webkit-transform: translateY(0);
+  }
+}
+
+@-moz-keyframes fadeInDown {
+  0% {
+    opacity: 0;
+    -moz-transform: translateY(-20px);
+  }
+  100% {
+    opacity: 1;
+    -moz-transform: translateY(0);
+  }
+}
+
+@-o-keyframes fadeInDown {
+  0% {
+    opacity: 0;
+    -o-transform: translateY(-20px);
+  }
+  100% {
+    opacity: 1;
+    -o-transform: translateY(0);
+  }
+}
+
+@keyframes fadeInDown {
+  0% {
+    opacity: 0;
+    transform: translateY(-20px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+.fadeInDown {
+  -webkit-animation-name: fadeInDown;
+  -moz-animation-name: fadeInDown;
+  -o-animation-name: fadeInDown;
+  animation-name: fadeInDown;
+}
+
+@-webkit-keyframes fadeInLeft {
+  0% {
+    opacity: 0;
+    -webkit-transform: translateX(-20px);
+  }
+  100% {
+    opacity: 1;
+    -webkit-transform: translateX(0);
+  }
+}
+
+@-moz-keyframes fadeInLeft {
+  0% {
+    opacity: 0;
+    -moz-transform: translateX(-20px);
+  }
+  100% {
+    opacity: 1;
+    -moz-transform: translateX(0);
+  }
+}
+
+@-o-keyframes fadeInLeft {
+  0% {
+    opacity: 0;
+    -o-transform: translateX(-20px);
+  }
+  100% {
+    opacity: 1;
+    -o-transform: translateX(0);
+  }
+}
+
+@keyframes fadeInLeft {
+  0% {
+    opacity: 0;
+    transform: translateX(-20px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateX(0);
+  }
+}
+
+.fadeInLeft {
+  -webkit-animation-name: fadeInLeft;
+  -moz-animation-name: fadeInLeft;
+  -o-animation-name: fadeInLeft;
+  animation-name: fadeInLeft;
+}
+
+.fadeOutDown {
+  -webkit-animation-name: fadeOutDown;
+  -moz-animation-name: fadeOutDown;
+  -o-animation-name: fadeOutDown;
+  animation-name: fadeOutDown;
+}
+
+@-webkit-keyframes fadeOutLeft {
+  0% {
+    opacity: 1;
+    -webkit-transform: translateX(0);
+  }
+  100% {
+    opacity: 0;
+    -webkit-transform: translateX(-20px);
+  }
+}
+
+@-moz-keyframes fadeOutLeft {
+  0% {
+    opacity: 1;
+    -moz-transform: translateX(0);
+  }
+  100% {
+    opacity: 0;
+    -moz-transform: translateX(-20px);
+  }
+}
+
+@-o-keyframes fadeOutLeft {
+  0% {
+    opacity: 1;
+    -o-transform: translateX(0);
+  }
+  100% {
+    opacity: 0;
+    -o-transform: translateX(-20px);
+  }
+}
+
+@keyframes fadeOutLeft {
+  0% {
+    opacity: 1;
+    transform: translateX(0);
+  }
+  100% {
+    opacity: 0;
+    transform: translateX(-20px);
+  }
+}
+
+@-webkit-keyframes fadeOut {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+
+@-moz-keyframes fadeOut {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+
+@-o-keyframes fadeOut {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+
+@keyframes fadeOut {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+
+.animated.fadeOut {
+  -webkit-animation-name: fadeOut;
+  -moz-animation-name: fadeOut;
+  -o-animation-name: fadeOut;
+  animation-name: fadeOut;
+}
+
+.animated.fadeOutLeft {
+  -webkit-animation-name: fadeOutLeft;
+  -moz-animation-name: fadeOutLeft;
+  -o-animation-name: fadeOutLeft;
+  animation-name: fadeOutLeft;
+}
+
+
 /**** PRIMARY
 *============================================================*/
-#container {
-  max-width: 30em;
+.container {
   margin: 0 auto;
+}
+
+.wrapper {
+  max-width: 30em;
+}
+
+.wrapper_projects {
+  max-width: 60em;
 }
 
 .display_block {
@@ -646,12 +1069,32 @@ optgroup {
   margin: 2.5em 0;
 }
 
+.margin-caps_medium {
+  margin: 1.625em 0;
+}
+
 .margin-caps_small {
   margin: 0.75em 0;
 }
 
+.margin-top_large {
+  margin: 2.5em 0 0;
+}
+
+.margin-top_medium {
+  margin: 1.625em 0 0;
+}
+
+.margin-top_small {
+  margin: 0.75em 0 0;
+}
+
 .margin-sides_large {
   margin: 0 2.5em;
+}
+
+.margin-sides_medium {
+  margin: 0 1.625em;
 }
 
 .margin-sides_small {
@@ -711,12 +1154,13 @@ optgroup {
   width: 8em;
 }
 
-.way_home, .way_home:hover {
+#home_trigger, #home_trigger:hover {
   background: none;
   border: none;
   border-radius: 0;
   color: #000000;
   text-decoration: none;
+  cursor: pointer;
 }
 
 @media screen and (max-width: 330px) {
@@ -727,13 +1171,13 @@ optgroup {
 
 @media screen and (max-width: 380px) {
   .header_one {
-    font-size: 4em;
+    font-size: 3.5em;
   }
 }
 
 /**** MAIN
 *============================================================*/
-a .icons {
+a .icons, a .project_overlay, a .project_title {
   cursor: pointer;
 }
 
@@ -807,7 +1251,7 @@ a .icons {
 }
 
 .gel_screen {
-    visibility: hidden;
+  visibility: hidden;
   opacity: 0;
   -webkit-transform: scale(0.9);
   transform: scale(0.9);
@@ -828,7 +1272,6 @@ a .icons {
   cursor: default;
 }
 
-
 @media screen and (max-width: 544px) {
   .gel {
     font-size: 80%;
@@ -844,4 +1287,267 @@ a .icons {
     max-width: 320px;
     min-width: 320px;
   }
+}
+
+/**** PROJECTS
+*============================================================*/
+.projects_hidden {
+  display: none;
+  visibility: hidden;
+  opacity: 0;
+  transition: visibility 0s 2s, opacity 2s linear;
+}
+
+.projects_revealed {
+  display: initial;
+  visibility: visible;
+  opacity: 1;
+  transition: opacity 2s linear;
+}
+
+.projects {
+}
+
+.projects_box {
+}
+
+#projects_trigger {
+}
+
+.work {
+  height: 100vh;
+  width: 100vw;
+  position: fixed;
+  overflow: auto;
+  top: 0;
+  z-index: 30;
+  overflow-x: none;
+  background-color: #FBFBFB;
+  -webkit-transition: all 0.25s cubic-bezier(0.29, 0.59, 0.62, 0.88);
+  -moz-transition: all 0.25s cubic-bezier(0.29, 0.59, 0.62, 0.88);
+  -o-transition: all 0.25s cubic-bezier(0.29, 0.59, 0.62, 0.88);
+  transition: all 0.25s cubic-bezier(0.29, 0.59, 0.62, 0.88);
+}
+
+.work.work--right {
+  left: 100vw;
+}
+
+.work.work--in-view {
+  left: 0;
+}
+
+.single_project {
+  width: 100%;
+  /*line-height: 0;*/
+  margin-top: 1.6rem;
+  margin-bottom: 1.6rem;
+  /*visibility: hidden;*/
+}
+
+.single_project .animated {
+  visibility: visible;
+}
+
+@media only screen and (min-width: 1441.008px) {
+  .single_project {
+    position: relative;
+/*    padding-left: 0.9375rem;
+    padding-right: 0.9375rem;*/
+    float: left;
+  }
+}
+
+@media only screen and (min-width: 1025.008px) {
+  .single_project {
+    position: relative;
+    width: 100%;
+  }
+}
+
+@media only screen and (min-width: 641.008px) {
+  .single_project {
+    position: relative;
+/*    padding-left: 0.9375rem;
+    padding-right: 0.9375rem;*/
+    float: left;
+  }
+}
+
+.project_image {
+  float: left;
+  position: relative;
+  display: block;
+  line-height: 0;
+  transition: all 0.3s linear;
+  -webkit-transition: all 0.3s linear;
+  -moz-transition: all 0.3s linear;
+  -o-transition: all 0.3s linear;
+}
+
+.project_image:hover .project_overlay {
+  opacity: 0.45;
+}
+
+.project_img {
+  border: 2px solid #000000;
+  border-radius: 0.3em;
+}
+
+.project_title:hover {
+  text-decoration: underline;
+}
+
+@media only screen and (max-width: 569px) {
+  .project_image {
+    width: 85%;
+    float: inherit;
+    display: inline-block;
+    margin: 0 auto;
+    margin-left: 7.5%;
+    margin-right: 7.5%;
+    margin-bottom: 2.5rem;
+    text-align: center;
+  }
+  .project_image .project_overlay {
+    transition: all 0.3s linear;
+    -webkit-transition: all 0.3s linear;
+    -moz-transition: all 0.3s linear;
+    -o-transition: all 0.3s linear;
+    background: #0099CC;
+    display: inline-block;
+    position: absolute;
+    z-index: 999;
+    height: 100%;
+    width: 85%;
+    opacity: 0;
+    text-align: center;
+    line-height: 4em;
+    max-width: 85%;
+    opacity: 0;
+    /*text-align: center;*/
+    line-height: 4em;
+  }
+  .project_img {
+    /*display: inline-block;*/
+    width: 85%;
+    max-width: 100%;
+    display: inline-block;
+    height: auto;
+    vertical-align: middle;
+    -ms-interpolation-mode: bicubic;
+    margin: 0 auto;
+  }
+  .project_title {
+    text-align: center;
+    margin: 0 0 1.5rem;
+  }
+  .project_commentary {
+    margin-left: 3.5%;
+    margin-right: 3.5%;
+  }
+  .project_blurb {
+    /*font-size: 1.15rem;*/
+    font-size: 0.9rem;
+  }
+}
+
+.single_project img {
+  transition: all 0.3s linear;
+  -webkit-transition: all 0.3s linear;
+  -moz-transition: all 0.3s linear;
+  -o-transition: all 0.3s linear;
+  filter: url("data:image/svg+xml;utf8,<svg xmlns=\'http://www.w3.org/2000/svg\'><filter id=\'grayscale\'><feColorMatrix type=\'matrix\' values=\'0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0\'/></filter></svg>#grayscale");
+  filter: gray;
+  -webkit-filter: grayscale(100%);
+  -moz-filter: grayscale(100%);
+  background: #EFEFEF;
+}
+
+.single_project:hover img {
+  filter: url("data:image/svg+xml;utf8,<svg xmlns=\'http://www.w3.org/2000/svg\'><filter id=\'grayscale\'><feColorMatrix type=\'matrix\' values=\'0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0\'/></filter></svg>#grayscale");
+  filter: gray;
+  -webkit-filter: grayscale(0%);
+  -moz-filter: grayscale(0%);
+}
+
+@media only screen and (max-width: 569px) {
+  .single_project img {
+    filter: url("data:image/svg+xml;utf8,<svg xmlns=\'http://www.w3.org/2000/svg\'><filter id=\'grayscale\'><feColorMatrix type=\'matrix\' values=\'0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0\'/></filter></svg>#grayscale");
+    -webkit-filter: grayscale(0%);
+    -moz-filter: grayscale(0%);
+  }
+}
+
+@media only screen and (min-width: 569px) {
+  .project_image .project_overlay {
+    transition: all 0.3s linear;
+    -webkit-transition: all 0.3s linear;
+    -moz-transition: all 0.3s linear;
+    -o-transition: all 0.3s linear;
+    background: #0099CC;
+    display: inline-block;
+    position: absolute;
+    z-index: 999;
+    height: 100%;
+    width: 95%;
+    opacity: 0;
+    text-align: center;
+    line-height: 4em;
+  }
+  .project_overlay {
+    width: 95%;
+  }
+  .project_image {
+    height: 100%;
+    max-width: 95%;
+  }
+  .project_img {
+    width: 95%;
+    /*max-width: 95%;*/
+    display: inline-block;
+    height: auto;
+    vertical-align: middle;
+    -ms-interpolation-mode: bicubic;
+    margin: 0 auto;
+  }
+  .project_title {
+    margin: 0.6em 0 0 18.55em;
+  }
+  .project_word_shift {
+    float: right;
+  }
+  .project_blurb {
+    font-size: 1.1rem;
+  }
+}
+
+.project_blurb {
+  text-rendering: optimizeLegibility;
+}
+
+/*@media only screen and (max-width: 1441.008px) {
+  .project_blurb {
+    float: right;
+  }
+}
+
+@media only screen and (max-width: 1025.008px) {
+  .project_blurb {
+    float: right;
+  }
+}
+
+@media only screen and (max-width: 569px) {
+  .project_blurb {
+    float: inherit;
+    margin: 0 auto;
+  }
+}*/
+
+/**** TEST BOX
+*============================================================*/
+.test_box {
+  border-radius: 0.9375rem;
+  background: #4682B4;
 }
