--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1191,8 +1191,8 @@ a .icons, a .project_overlay, a .project_title {
 
 .icons {
   margin: 0 2.5%;
-  height: 2em;
-  width: 2em;
+  height: 2.67rem;
+  width: 2.67rem;
 }
 
 /**** FOOTER
