--- a/public/scss/utilities/_functions.scss
+++ b/public/scss/utilities/_functions.scss
@@ -1,6 +1,31 @@
 /*_functions.scss*/
 
-/**** STR-REPLACE FUNCTION
+/**** IMPORT IF GOOGLE FONTS URL IS DEFINED
+*=======================================================================*/
+@if variable-exists(font-url--google) {
+  @import url($font-url--google);
+}
+
+/**** CALCULATE REM VALUES
+*=======================================================================*/
+@function rem($target, $context: $base__font-size) {
+  @return ($target / $context) * 1rem;
+}
+
+/**** CALL THE COLOR PALETTE MODIFIERS IN COLOR VALUES
+*=======================================================================*/
+@function palette($palette, $shade: "base") {
+  @return map-get(map-get($color-palettes, $palette), $shade);
+}
+
+/**** SET THE "CONTEXT" WIDTH FOR THE GRID
+*=======================================================================*/
+@function g-context($g-col-width, $g-col-count ,$g-gutter-width) {
+  $g-context: ($g-col-width * $g-col-count) + ($g-gutter-width * ($g-col-count - 1));
+  @return $g-context;
+}
+
+/**** STR-REPLACE
 *=======================================================================*/
 /// Replace `$search` with `$replace` in `$string`
 /// Replaces a substring within another string
@@ -17,4 +42,19 @@
   }
 
   @return $string;
+}
+
+/**** DEEP GET IN MAPS
+*=======================================================================*/
+/// Map deep get
+/// @author Hugo Giraudel
+/// @access public
+/// @param {Map} $map - Map
+/// @param {Arglist} $keys - Key chain
+/// @return {*} - Desired value
+@function map-deep-get($map, $keys...) {
+    @each $key in $keys {
+        $map: map-get($map, $key);
+    }
+    @return $map;
 }
