--- a/public/scss/states/_index.scss
+++ b/public/scss/states/_index.scss
@@ -1,9 +1,4 @@
 /*_index.scss*/
 
-/**** IMPORT COLLAPSED
+/**** STATES MANIFEST
 *=======================================================================*/
-@import "collapsed";
-
-/**** IMPORT GRID DISPLAY
-*=======================================================================*/
-@import "grid-display";
