--- a/public/scss/themes/_index.scss
+++ b/public/scss/themes/_index.scss
@@ -1,5 +1,4 @@
-/*alimations.css*/
+/*_index.scss*/
 
-/**** SIMPLE ANIMATIONS
+/**** STATES THEMES
 *=======================================================================*/
-
