--- a/public/scss/utilities/_index.scss
+++ b/public/scss/utilities/_index.scss
@@ -1,17 +1,15 @@
 /*_index.scss*/
 
-/**** IMPORT GLOBAL CONFIG
+/**** UTILITIES MANIFEST
 *=======================================================================*/
+/*===== Import global configuration =====*/
 @import "config";
 
-/**** IMPORT FUNCTIONS
-*=======================================================================*/
+/*===== Import functions =====*/
 @import "functions";
 
-/**** IMPORT HELPERS
-*=======================================================================*/
+/*===== Import helpers =====*/
 @import "helpers";
 
-/**** IMPORT MIXINS
-*=======================================================================*/
+/*===== Import mixins =====*/
 @import "mixins";
