--- a/public/scss/modules/_design_tests.scss
+++ b/public/scss/modules/_design_tests.scss
@@ -1,6 +1,6 @@
-/*design_tests.css*/
+/*design_tests.scss*/
 
-/**** MODULES
+/**** DESIGN TESTS
 *=======================================================================*/
 .design_test {
   background-color: #B202B2;
@@ -8,12 +8,11 @@
   border-radius: 0.625rem;
   margin: 1.47rem 0 2rem;
   max-width: 40.4rem;
-}
-
-.design_test a {
-  color: #E80000;
-  font-weight: 600;
-  text-decoration: none;
+  a {
+    color: #E80000;
+    font-weight: 600;
+    text-decoration: none;
+  }
 }
 
 .test_button {
@@ -25,8 +24,7 @@
   margin: 1rem;
 }
 
-/**** STATE
-*=======================================================================*/
+/*===== State =====*/
 .design_test a:hover {
   background-color: #4F4F4F;
   color: #31157A;
