--- a/public/scss/states/_index.scss
+++ b/public/scss/states/_index.scss
@@ -2,3 +2,11 @@
 
 /**** STATES MANIFEST
 *=======================================================================*/
+/*===== Import collapsed states =====*/
+@import "collapsed";
+
+/*===== Import grid-display states =====*/
+@import "grid-display";
+
+/*===== Import design test button states =====*/
+@import "design_tests";
